# euystrukded

./: .gitignore  CMakeLists.txt  CODE_STYLE.md  README.md  STRUCTURE.md  compile-linux.sh  compile-windows.ps1  run.ps1  run.sh  word_machine.c
driver/adt/: example.txt  food_driver.c  fooddriver.c  fooddriver.sh  lfrdriver.c  lfrdriver.sh  list_delivery_driver.c  list_food_driver.c  listdeliverydriver.c  listdeliverydriver.sh  listfooddriver.c  listfooddriver.sh  matrixdriver.c  matrixdriver.sh  notificationdriver.c  notificationdriver.sh  parsermachinedriver.c  parsermachinedriver.sh  pointdriver.c  pointdriver.sh  recipedriver.c  recipedriver.sh  simulatordriver.c  simulatordriver.sh  stack.c  stackdriver.c  stackdriver.sh  stringdriver.c  stringdriver.sh  timedriver.c  timedriver.sh  treedriver.c  treedriver.sh  wordmachine_driver.c  wordmachinedriver.c  wordmachinedriver.sh
src/: main.c
src/adt/: boolean.h  charmachine.c  charmachine.h  food.c  food.h  list_delivery.c  list_delivery.h  list_food.c  list_food.h  list_food_recipe.c  list_food_recipe.h  matrix.c  matrix.h  notification.c  notification.h  parsermachine.c  parsermachine.h  point.c  point.h  recipe.c  recipe.h  refrigerator.c  refrigerator.h  set.c  set.h  simulator.c  simulator.h  size.c  size.h  stack_command.c  stack_command.h  string.c  string.h  time.c  time.h  tree.c  tree.h  wordmachine.c  wordmachine.h
src/autobnmo/commands/: autobnmo.c  autobnmo.h  automove.c  automove.h  autoprocess.c  autoprocess.h  bnmogo.c  bnmogo.h
src/autobnmo/core/: action_list.c  action_list.h  pathtoservice.c  pathtoservice.h  scheduler.c  scheduler.h  writer.c  writer.h
src/commands/: boil.c  boil.h  buy.c  buy.h  catalog.c  catalog.h  chop.c  chop.h  clear.c  clear.h  cookbook.c  cookbook.h  delivery.c  delivery.h  exit.c  exit.h  fry.c  fry.h  help.c  help.h  inventory.c  inventory.h  mix.c  mix.h  move.c  move.h  processor.c  processor.h  recommend.c  recommend.h  redo.c  redo.h  refrigerator.c  refrigerator.h  start.c  start.h  undo.c  undo.h  wait.c  wait.h
src/config/: food.txt  food_size.txt  map.txt  recipe.txt
src/data/: configdata.c  configdata.h  delivery.c  delivery.h  history.c  history.h  refrigerator.c  refrigerator.h  simulator.c  simulator.h
src/services/: boiler.c  boiler.h  chopper.c  chopper.h  clock.c  clock.h  delivery.c  delivery.h  food_processor.c  food_processor.h  food_recommendation.c  food_recommendation.h  fryer.c  fryer.h  history.c  history.h  map.c  map.h  mixer.c  mixer.h  notifier.c  notifier.h  refrigerator.c  refrigerator.h  simulator.c  simulator.h
src/utils/: display.c  display.h  parser.c  parser.h  validator.c  validator.h
